<resources>
    <string name="app_name">UnitTesting</string>

    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>

    <string name="required_field">This field is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="password_too_short">Password is too short (8 chars min.)</string>
    <string name="invalid_password">Invalid password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
</resources>